CDR-1451 Ensure tags are also hard deleted